# og-c

./: CMakeLists.txt  main.c  makefile
